# aoc-2021-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/aoc2021/: CMakeLists.txt
lib/aoc2021/include/aoc2021/: day1.hpp  day2.hpp  read_vector.hpp
lib/aoc2021/include/aoc2021/day1/: count_increases_over_window.hpp  part1.hpp  part2.hpp
lib/aoc2021/include/aoc2021/day1/test/: CMakeLists.txt  day1_tests.cpp
lib/aoc2021/include/aoc2021/day2/: follow_planned_course.hpp  instruction.hpp  part1.hpp  part1_location.hpp  part2.hpp  part2_location.hpp
lib/aoc2021/include/aoc2021/day2/test/: CMakeLists.txt  day2_tests.cpp
lib/aoc2021/include/aoc2021/day3/: operators.hpp  part1.hpp  part2.hpp
lib/aoc2021/include/aoc2021/day3/test/: CMakeLists.txt  day3_tests.cpp
lib/aoc2021/include/aoc2021/day4/: bingo.hpp  part1.hpp  part2.hpp
lib/aoc2021/include/aoc2021/day4/test/: CMakeLists.txt  day4_tests.cpp
src/: CMakeLists.txt  day1_part1.cpp  day1_part2.cpp  day2_part1.cpp  day2_part2.cpp  day3_part1.cpp  day3_part2.cpp  day4_part1.cpp  day4_part2.cpp
test/: CMakeLists.txt  day1.cpp  day1_tests.cpp
