add_custom_target(answers ALL)

function(day_part DAY PART)
    add_executable(day${DAY}_part${PART} day${DAY}_part${PART}.cpp)
    target_link_libraries(day${DAY}_part${PART} PRIVATE aoc2021)
    add_custom_command(OUTPUT day${DAY}_part${PART}.txt COMMAND ./day${DAY}_part${PART} >day${DAY}_part${PART}.txt <${CMAKE_SOURCE_DIR}/data/day${DAY}.txt DEPENDS day1_part1)
    add_custom_target(generate_day${DAY}_part${PART} DEPENDS day${DAY}_part${PART} day${DAY}_part${PART}.txt)
    add_dependencies(answers generate_day${DAY}_part${PART})
endfunction()

day_part(1 1)
day_part(1 2)
day_part(2 1)
day_part(2 2)
day_part(3 1)
day_part(3 2)
day_part(4 1)
day_part(4 2)